--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>profile</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <nav>
-    <div class="container">
-      <h2>judul</h2>
-    </div>
-  </nav>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>profile</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <nav>
+      <h2 class="logo">rio abilaji</h2>
+      <ul>
+        <li><a href="#"> home </a></li>
+        <li><a href="#"> about </a></li>
+        <li><a href="#"> work </a></li>
+        <li><a href="#"> skill </a></li>
+        <li><a href="#"> contact </a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
