--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
   <body>
     <nav>
       <h2 class="logo">rio abilaji</h2>
-      <ul>
+      <ul class="menu">
         <li><a href="#"> home </a></li>
         <li><a href="#"> about </a></li>
         <li><a href="#"> work </a></li>
         <li><a href="#"> skill </a></li>
         <li><a href="#"> contact </a></li>
       </ul>
+      <div class="menu-togle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
   </body>
 </html>
