--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         <li><a href="#"> skill </a></li>
         <li><a href="#"> contact </a></li>
       </ul>
-      <div class="menu-togle">
-        <span></span>
-        <span></span>
-        <span></span>
+      <div id="menuTogle">
       </div>
     </nav>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
