--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#"> skill </a></li>
         <li><a href="#"> contact </a></li>
       </ul>
-      <div id="menuTogle">
+      <div class="menuTogle">
       </div>
     </nav>
 
