--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <h2 class="logo">rio abilaji</h2>
+      <h2 class="logo">abilaji</h2>
       <ul >
         <li><a href="#"> home </a></li>
         <li><a href="#"> about </a></li>
