--- a/index.html
+++ b/index.html
@@ -17,9 +17,20 @@
         <li><a href="#"> skill </a></li>
         <li><a href="#"> contact </a></li>
       </ul>
-      <div class="menuTogle">
-      </div>
+      <div class="menuTogle"></div>
     </nav>
+    
+    <section>
+      <div class="jumbotron">
+        <div class="content">
+          <h1>hi, i'am rio abilaji</h1>
+          <h3>Frontend developer</h3>
+          <p>High level experience in web design and development
+            knowledge, producing quality work.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <script src="js/script.js"></script>
   </body>
