--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <section>
       <div class="jumbotron">
         <div class="content">
-          <h1>hi, i'am rio abilaji</h1>
-          <h3>Frontend developer</h3>
+          <h1>hi, i'am <span>rio abilaji</span></h1>
+          <h3>
+            <span class="typed-text"></span>
+            <span class="cursor ">&nbsp;</span>
+          </h3>
           <p>High level experience in web design and development
             knowledge, producing quality work.
           </p>
