--- a/index.html
+++ b/index.html
@@ -272,15 +272,18 @@
         </div>
       </div>
       <div class="contact-form">
-        <form action="">
+        <form name="my-contact">
           <div class="label-class">
-            <label for="name"></label>
+            <!-- <label for="name"></label> -->
             <input type="text" id="#" name="name" placeholder="name">
-            <label for="name"></label>
-            <input type="text" id="#" name="name" placeholder="email">
+            <!-- <label for="name"></label> -->
+            <input type="email" id="#" name="email" placeholder="email">
           </div>
-          <textarea class="text" name="subject" id="#" cols="#" rows="#" placeholder="write something.."></textarea>
-          <button>Send Message<img src="./assets/icon/send.svg" alt=""></button>
+          <textarea class="text" name="message" id="#" cols="#" rows="#" placeholder="write something.."></textarea>
+          <button class="btn-kirim" type="submit">Send Message<img src="./assets/icon/send.svg" alt=""></button>
+          <div class="alert">
+            <h4 style="color: #05ff75; margin-top: 10px;">*Message success</h4>
+          </div>
         </form>
       </div>
       <div class="foto">
