--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <img src="./assets/icon/linkedin.svg" alt="">
           <div class="contact-person">
             <h3>linkedin</h3>
-            <p>abilaji</p>
+            <a href="www.linkedin.com/in/rio-abilaji12">profile</a>
           </div>
         </div>
 
@@ -267,7 +267,7 @@
           <img src="./assets/icon/github.svg" alt="">
           <div class="contact-person">
             <h3>github</h3>
-            <p>abilaji</p>
+            <a href="https://github.com/abilaji">profile</a>
           </div>
         </div>
       </div>
