--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <img src="./assets/icon/linkedin.svg" alt="">
           <div class="contact-person">
             <h3>linkedin</h3>
-            <a href="www.linkedin.com/in/rio-abilaji12">profile</a>
+            <a href="https://www.linkedin.com/in/rio-abilaji12/">profile</a>
           </div>
         </div>
 
