--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
                 <p>Companies worked</p>
               </div>
             </div>
-            <button>
+            <div class="btn-download">
+              <a  href="https://drive.google.com/file/d/1baAOwoxPkgs6q8ncmaoyMJNJxCLACHiR/view?usp=sharing"> Download CV <img src="./assets/icon/download.svg" alt="download" /></a>
+            </div>
+            <!-- <button> 
               Download CV
               <img src="./assets/icon/download.svg" alt="download" />
-            </button>
+            </button> -->
           </div>
         </div>
       </div>
@@ -202,8 +205,8 @@
                   <div class="col-content">
                       <div class="content">
                         <h3>ux research</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, obcaecati.</p>
-                        <h4><a href="#">view more</a><img src="./assets/icon/right.svg" alt="arrow"></h4>
+                        <p>This is my research UI/UX article about tourist attraction</p>
+                        <h4><a href="https://medium.com/@abilaji96/ux-case-study-sistem-informasi-objek-wisata-f277ab87cc49">view more</a><img src="./assets/icon/right.svg" alt="arrow"></h4>
                       </div>
                   </div>
                 </div>
@@ -214,8 +217,8 @@
                   <div class="col-content">
                       <div class="content">
                         <h3>list the movie</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, obcaecati.</p>
-                        <h4><a href="#">view more</a><img src="./assets/icon/right.svg" alt="arrow"></h4>
+                        <p>This is my project about get movie api using vanilla javaScript</p>
+                        <h4><a href="https://abilaji.github.io/movie/">view more</a><img src="./assets/icon/right.svg" alt="arrow"></h4>
                       </div>
                   </div>
                 </div>
@@ -226,7 +229,7 @@
                   <div class="col-content">
                       <div class="content">
                         <h3>reactJS</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, obcaecati.</p>
+                        <p>Project about rendom user page get api using ReactJS but it's still localhost</p>
                         <h4><a href="#">view more</a><img src="./assets/icon/right.svg" alt="arrow"></h4>
                       </div>
                   </div>
