--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                       <div class="content">
                         <h3>ux research</h3>
                         <p>This is my research UI/UX article about tourist attraction</p>
-                        <h4><a href="https://medium.com/@abilaji96/ux-case-study-sistem-informasi-objek-wisata-f277ab87cc49">view more</a><img src="./assets/icon/right.svg" alt="arrow"></h4>
+                        <h4><a href="https://medium.com/@abilaji96">view more</a><img src="./assets/icon/right.svg" alt="arrow"></h4>
                       </div>
                   </div>
                 </div>
