--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               </div>
             </div>
             <div class="btn-download">
-              <a  href="https://drive.google.com/file/d/1baAOwoxPkgs6q8ncmaoyMJNJxCLACHiR/view?usp=sharing"> Download CV <img src="./assets/icon/download.svg" alt="download" /></a>
+              <a  href="https://drive.google.com/file/d/1baAOwoxPkgs6q8ncmaoyMJNJxCLACHiR/view?"> Download CV <img src="./assets/icon/download.svg" alt="download" /></a>
             </div>
             <!-- <button> 
               Download CV
